// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Grid > renders wrapped Col correctly 1`] = `
"<div class="xy-row css-dev-only-do-not-override-1p3hq3p" style="margin-left: -10px; margin-right: -10px;">
  <div>
    <div class="xy-col xy-col-12 css-dev-only-do-not-override-1p3hq3p" style="padding-left: 10px; padding-right: 10px;">
      <!---->
    </div>
  </div>
  <div class="xy-col xy-col-12 css-dev-only-do-not-override-1p3hq3p" style="padding-left: 10px; padding-right: 10px;">
    <!---->
  </div>
</div>"
`;

exports[`Grid > should render Col 1`] = `
"<div class="xy-col xy-col-2 css-dev-only-do-not-override-1p3hq3p">
  <!---->
</div>"
`;

exports[`Grid > should render Row 1`] = `
"<div class="xy-row css-dev-only-do-not-override-1p3hq3p">
  <!---->
</div>"
`;
